# duckdb-webdavfs

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  devenv.nix  extension_config.cmake
.github/: dependabot.yml
.github/workflows/: CheckDuckDBVersion.yml  IntegrationTests.yml  MainDistributionPipeline.yml
docs/: UPDATING.md
scripts/: run_webdav_test_server.sh  set_webdav_test_server_variables.sh  stop_webdav_test_server.sh  webdav.yml
src/: crypto.cpp  hash_functions.cpp  httpfs.cpp  httpfs_curl_client.cpp  httpfs_util_stub.cpp  webdav_extension.cpp  webdav_secrets.cpp  webdavfs.cpp
src/include/: crypto.hpp  hash_functions.hpp  http_metadata_cache.hpp  httpfs.hpp  httpfs_client.hpp  httpfs_curl_client.hpp  webdav_secrets.hpp  webdavfs.hpp  webdavfs_extension.hpp
test/: README.md
test/sql/: webdav.test
test/sql/secrets/: create_secret_webdav.test
test/sql/webdav/: README.md  webdav_comprehensive.test  webdav_config.test  webdav_docker_test.test  webdav_error_handling.test  webdav_settings.test  webdav_storage_full_test.test
